<resources>
    <string name="app_name">Contacts2025</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_phone">Enter Phone</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="recycler_view_desc">Contacts list</string>
    <string name="delete_contact">Delete contact</string>
    <string name="delete_button_desc">Delete this contact</string>
</resources>
